<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="24dp"
    app:contentPadding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_body_nivel_intermedio"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duraci_n_45_min_nivel_intermedio"
                    android:layout_marginBottom="8dp"/>

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:progress="35"
                    app:trackThickness="8dp"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comenzar"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
